templates/azure-loganalytics-exporter_template.yaml
---
# Source: azure-loganalytics-exporter/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-azure-loganal
  namespace: default
  labels:
    
    helm.sh/chart: azure-loganalytics-exporter-1.0.7
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: azure-loganalytics-exporter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: azure-loganalytics-exporter
    app.kubernetes.io/version: "23.6.0"
spec:
  podSelector:
    matchLabels:
      
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: azure-loganalytics-exporter
  policyTypes: 
    - Ingress
    - Egress
  ingress: 
    []
  egress: 
    - ports:
      - port: 53
        protocol: TCP
    - ports:
      - port: 53
        protocol: UDP
    - ports:
      - port: 443
        protocol: TCP
---
# Source: azure-loganalytics-exporter/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: release-name-azure-loganal
  namespace: default
  labels:
    
    helm.sh/chart: azure-loganalytics-exporter-1.0.7
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: azure-loganalytics-exporter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: azure-loganalytics-exporter
    app.kubernetes.io/version: "23.6.0"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http-metrics
      appProtocol: http
  selector:
    
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: azure-loganalytics-exporter
---
# Source: azure-loganalytics-exporter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-azure-loganal
  namespace: default
  labels:
    
    helm.sh/chart: azure-loganalytics-exporter-1.0.7
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: azure-loganalytics-exporter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: azure-loganalytics-exporter
    app.kubernetes.io/version: "23.6.0"
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: azure-loganalytics-exporter
  template:
    metadata:
      labels:
        
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/name: azure-loganalytics-exporter
      annotations:
        checksum/config: "91785db62deaf887de171e0f53b2191e41c28e5f6077fd98547f5ec8b3f720b0"
        checksum/secret: "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
    spec:
      serviceAccountName: release-name-azure-loganal
      terminationGracePeriodSeconds: 60
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
        - 1000
      containers:
        - name: azure-loganalytics-exporter
          image: "docker.io/webdevops/azure-loganalytics-exporter:23.6.0"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          volumeMounts:
            - mountPath: /config/
              name: config
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
        - name: config
          configMap:
            name: release-name-azure-loganal
